# ShaneGriffinnet

./: .env.example  .gitignore  .htaccess  BatchThumbGen.py  Build.json  Build.py  Bundle.py  Dockerfile  Makefile  Photography.html  Projects.html  README.md  Video.html  composer.json  docker-compose.yml  index.html  index.php  mainPage.php  nginx-dev.conf  nginx-prod.conf  package-lock.json  package.json  pages.json  styles.css  testPage.html
Classes/: Image.php  iComponent.php
PageContents/: PAGE_NOT_FOUND.php  Photography.php  Projects.html  Projects.php  TEMP.html
Stylesheets/: photography.css  styles.css
backend/: .env.example  .gitignore  Cargo.toml  sqlx-data.json
backend/migrations/: 0_create_images.sql
backend/src/: check_api_key.rs  config.rs  controllers.rs  database.rs  get_uploaded_image.rs  main.rs  routes.rs
database/: 0_create_images.sql
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue
frontend/src/components/: AdminImageForm.vue  Gallery.vue  Work.vue
js/: javascript.js
js/objects/: Content.js  Gallery.js  Nav.js  Transition.js
nginx/: mime.types  nginx.conf.template
php/: Image.php  MainPage.php  Photography.php  Welcome.php
public/: index.html
src/: App.vue  index.html
src/css/: config.pcss  content.css  global.css  nav-mobile.css  nav.css  photography.css
src/js/: index.js
src/js/modules/: Nav.js  Photography.js  (+4 more)
src/sections/: photography.html  projects.html  video.html  work.html
src/server/: get-images.php
stylesheets/: styles.css
(+1 files in other folders)
