[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4"
cargo-watch = "8.4.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-async-std-native-tls", "migrate", "sqlite"] }
dotenv = "0.15.0"
sanitize-filename = "0.2.1"
actix-multipart = "0.6.0"
futures-lite = "1.13.0"
env_logger = "0.10.0"
